# plauder

./: .env.example  .gitignore  README.md  fluistern-gui.desktop  index.html  install.sh  package.json  pnpm-lock.yaml  session.txt  vite.config.ts  voice-input-daemon.sh  voice-input.sh
.github/workflows/: build.yml
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  database.rs  lib.rs  main.rs
src/components/: CorrectionsTab.tsx  HistoryTab.tsx  LogsTab.tsx  SettingsTab.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  switch.tsx  tabs.tsx  textarea.tsx
src/lib/: api.ts  diff.ts
