[package]
name = "plauder"
version = "0.3.0"
description = "Plauder — voice dictation settings & history"
authors = ["chukfinley"]
edition = "2021"

[lib]
name = "plauder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "plauder-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
